2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile constructor/mapper/
	comparator/integrator/deintegrator/typifier for alias types to have
	the correct names.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.map/type-alias-1.pk: New test.
	* testsuite/poke.pkl/type-alias-1.pk: Likewise.

2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Set name of PVM struct
	type to provided non-null compile-time name.

2025-03-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Add assertion to verify
	that we're generating constructor for an unnamed struct.

2024-06-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_call_node_handlers): Use
	PKL_AST_TYPE_CODE2 instead of PKL_AST_TYPE_CODE.
	(pkl_do_pass_1): Likewise.
	* libpoke/pkl-tab.y: Pass the ast to pkl_env_register.
	(TYPENAME): Add a type alias node instead of the aliased type to
	the AST.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_typeof): Create a named
	type.
	* libpoke/pkl.c (pkl_defvar): Pass the ast to pkl_env_register.
	* libpoke/pvm-val.c (pvm_make_struct_type): Do not get a `name' argument.
	(pvm_type_equal_p): Struct types may have PVM_NULL as name.
	(pvm_make_exception): Set struct type name explicitly.
	* libpoke/pvm.jitter (mktysct): Do not get a type name argument.
	(tysctsetn): New instruction.
	* testsuite/poke.pkl/redef-diag-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* libpoke/pkl-insn.def: New instruction tysctsetn.
	* libpoke/pkl-gen.pks (field_location_str): Get the name of the
	struct type in an argument.
	(check_struct_field_constraint): Likewise.
	(handle_struct_field_constraints): Likewise.
	(struct_field_extractor): Likewise.
	(struct_field_mapper): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	(struct_deintegrator): Likewise.