@@ -1,3 +1,10 @@
+2025-03-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poke/pk-term.c (pk_term_hyperlink_1): Only keep invocation of
+	`styled_ostream_set_hyperlink' under
+	`ifdef HAVE_TEXTSTYLE_HYPERLINK_SUPPORT' guard.
+	(pk_term_end_hyperlink_1): Likewise.
+
 2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile constructor/mapper/
